# ionik-lib

./: .gitignore  CMakeLists.txt  LICENSE  PREFIX  README.md  library.cmake  update.sh
2ndparty/: CMakeLists.txt
demo/: CMakeLists.txt
demo/already_running/: CMakeLists.txt  main.cpp
demo/audio_spectrum/: CMakeLists.txt  MainWindow.qml  WavSpectrum.cpp  WavSpectrum.hpp  WavSpectrumView.qml  main.cpp  main.qrc
demo/available_audio_devices/: CMakeLists.txt  main.cpp
demo/available_net_interfaces/: CMakeLists.txt  main.cpp
demo/available_video_capture_devices/: CMakeLists.txt  main.cpp
demo/filesystem_monitor/: CMakeLists.txt  main.cpp
demo/iface-monitor/: CMakeLists.txt  main.cpp
demo/metrics_provider/: CMakeLists.txt  main.cpp  pdh_browse_counters.cpp  proc_provider.cpp  proc_provider.hpp  sysinfo_provider.cpp  sysinfo_provider.hpp
demo/mtu/: CMakeLists.txt  main.cpp
demo/usb_monitor/: CMakeLists.txt  main.cpp
demo/win32_service/: CMakeLists.txt  README.md  messages.mc  service.cpp  service_config.cpp  service_config.hpp.in  service_control.cpp  utils.hpp
include/pfs/ionik/: already_running.hpp  device_observer.hpp  error.hpp  exports.hpp  file.hpp  file_provider.hpp  local_file.hpp  namespace.hpp  tag.hpp
include/pfs/ionik/audio/: device.hpp  wav_explorer.hpp
include/pfs/ionik/filesystem_monitor/: monitor.hpp  platform_monitor.hpp
include/pfs/ionik/filesystem_monitor/backend/: inotify.hpp  win32.hpp  win32.hpp.DEPRECATED
include/pfs/ionik/filesystem_monitor/callbacks/: emitter_callbacks.hpp  fptr_calbacks.hpp  functional.hpp
include/pfs/ionik/metrics/: basic_net_provider.hpp  basic_net_statistics.hpp  counter.hpp  default_counters.hpp  default_provider.hpp  freedesktop_provider.hpp  getrusage_provider.hpp  gms_provider.hpp  linuxinfo_provider.hpp  netioapi_provider.hpp  network_counters.hpp  os_info.hpp  os_info_provider.hpp  pdh_provider.hpp  proc_meminfo_provider.hpp  proc_provider.hpp  proc_self_status_provider.hpp  proc_stat_provider.hpp  process_times_provider.hpp  psapi_provider.hpp  random_counters.hpp  random_metrics_provider.hpp  sys_class_net_provider.hpp  sysinfo_provider.hpp  system_counters.hpp  times_provider.hpp  windowsinfo_provider.hpp
include/pfs/ionik/net/: mtu-obsolete.hpp  netlink_monitor.hpp  netlink_socket.hpp  network_interface.hpp
include/pfs/ionik/video/: capture_device.hpp
scripts/: build-android.sh  build-windows.cmd  build.cxx11.android.sh  build.cxx11.cmd  build.cxx11.sh
src/: already_running.cpp  device_observer_android.cpp  device_observer_libudev.cpp  device_observer_win32.cpp  error.cpp  local_file_provider.cpp
src/android/pfs/ionik/: FileCache.java  FileInfo.java
src/audio/: device_info_dumb.cpp  device_info_pulseaudio.cpp  device_info_qt5.cpp  device_info_win32.cpp  wav_explorer.cpp
src/filesystem_monitor/: inotify.cpp  win32.cpp  win32.cpp.DEPRECATED
src/metrics/: counter.cpp  default_counters.cpp  default_provider.cpp  freedesktop_provider.cpp  getrusage_provider.cpp  gms_provider.cpp  linuxinfo_provider.cpp  netioapi_provider.cpp  network_counters.cpp  parser.cpp  parser.hpp  pdh_provider.cpp  proc_meminfo_provider.cpp  proc_provider.cpp  proc_reader.cpp  proc_reader.hpp  proc_self_status_provider.cpp  proc_stat_provider.cpp  process_times_provider.cpp  psapi_provider.cpp  random_counters.cpp  random_metrics_provider.cpp  sys_class_net_provider.cpp  sysinfo_provider.cpp  system_counters.cpp  times_provider.cpp  windowsinfo_provider.cpp
src/net/: mtu_linux-obsolete.cpp  netlink_monitor.cpp  netlink_socket.cpp  network_interface.cpp  network_interface_linux.cpp  network_interface_win32.cpp
src/video/: capture_device_info.cpp  capture_device_info_android.cpp  capture_device_info_v4l2.cpp  capture_device_info_win.cpp
tests/: CMakeLists.txt  file.cpp  wav_explorer.cpp
