################################################################################
# Copyright (c) 2022 Vladislav Trifochkin
#
# This file is part of `ionik-lib`.
#
# Changelog:
#      2022.08.21 Initial version.
################################################################################
add_subdirectory(usb_monitor)
