################################################################################
# Copyright (c) 2022,2023 Vladislav Trifochkin
#
# This file is part of `ionik-lib`.
#
# Changelog:
#      2022.08.21 Initial version.
#      2023.03.31 Added `available_audio_devices` demo (from obsolete `multimedia-lib`).
#      2023.10.19 Added `audio_spectrum` demo.
################################################################################
add_subdirectory(audio_spectrum)
add_subdirectory(available_audio_devices)
add_subdirectory(usb_monitor)
